simple-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
    name: http
  - protocol: TCP
    port: 1935
    targetPort: rtmp
    name: rtmp
  selector:
    app: simple-server
